--- a/index.html
+++ b/index.html
@@ -15,39 +15,20 @@
 
     <div class="card-container">
       <div class="headline">
-        <h1>May all your days be beautiful...</h1>
+        <h1>You deserve all the wonderful beauties in life...</h1>
       </div>
       <div class="body-text">
         <p>
-          sufficient words? very few <br>
-          can describe the true you <br>
-          oh, damn. your sexy smile <br>
-          yeah youre lil' bit crazy too <br><br>
-
-          my wish, for we all are hopeful, <br>
-          of all the love life has to give <br>
-          may all your days be beautiful <br>
-          yes mi amor, this you deserve <br><br>
-
-          <i>Nifemi</i>
+          ...and so much more, <i>Nifemi</i>. Best birthday wishes to you today. 
         </p>
       </div>
-
-      <div class="link-section">
-        <a href="../section-two/index.html">
-          <button>
-            <svg xmlns="http://www.w3.org/2000/svg" id='back' viewBox="0 0 256 512"><!-- Font Awesome Free 5.15.4 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) --><path d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"/></svg>
-            <!-- Previous -->
-          </button>
-        </a>
-        <a href="https://wa.me/+2349125422404?text=*Thanks%20guy.*%20">
-          <button>
-            <!-- Not bad -->
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 512"><!-- Font Awesome Free 5.15.4 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) --><path d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"/></svg>
-          </button>
-        </a>
-      </div>
-
+      <a href="../section-two/index.html">
+        <button>
+          <!-- I hate you too -->
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 512"><!-- Font Awesome Free 5.15.4 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) --><path d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"/></svg>
+        </button>
+      </a>
     </div>
   </div>
+</body>
 </html>
