--- a/section-two/index.html
+++ b/section-two/index.html
@@ -6,6 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../main.css">
   <title>hello</title>
+  <style>
+    @media only screen and (max-width:730px) {
+      .card-container {
+        max-width: 100vh-60px;
+      }
+    }
+  </style>
 </head>
 <body>
   <div class="main-div">
