--- a/section-two/index.html
+++ b/section-two/index.html
@@ -9,7 +9,7 @@
   <style>
     @media only screen and (max-width:730px) {
       .card-container {
-        max-width: 100vh-60px;
+        max-width: calc(100vh - 60px);
       }
     }
   </style>
